--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskMaster">
-        <activity android:name=".TaskDetailPage"></activity>
+        <activity android:name=".TaskDetailPage"/>
         <activity android:name=".SettingPage" />
         <activity android:name=".AllTask" />
-        <activity android:name=".AddTask" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".AddTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
