--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.4'
+
+
+        classpath 'com.android.tools.build:gradle:4.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // Add this line into `dependencies` in `buildscript`
+        classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.0'
     }
 }
 
@@ -23,3 +27,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+// Add this line at the end of the file
+apply plugin: 'com.amplifyframework.amplifytools'
