--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.android.taskmaster"
-        minSdkVersion 16
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -34,14 +34,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    // amplify
 
+   // amplify
     implementation 'com.amplifyframework:aws-api:1.24.0'
     implementation 'com.amplifyframework:aws-datastore:1.24.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test:runner:1.4.0'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
+
+    //Espresso dependencies for RecyclerView
     androidTestImplementation("com.android.support.test.espresso:espresso-contrib:3.0.2"){
         exclude group:'com.android,support',module: 'appcompat'
         exclude group:'com.android,support',module: 'support-v4'
@@ -51,10 +54,13 @@ dependencies {
         exclude module: 'recyclerview-v7'
 
     }
-    // amplify
 
+    // amplify
     implementation 'com.amplifyframework:aws-api:1.24.0'
     implementation 'com.amplifyframework:aws-datastore:1.24.0'
+    implementation 'com.amplifyframework:core:1.24.0'
+    implementation 'com.amplifyframework:aws-api:1.24.0'
+
     // room dependencies
     def room_version = "2.3.0"
 
