--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.taskmaster">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TaskMaster"
-      >
-        <activity android:name=".TaskDetailPage"
-            android:exported="true"/>
-        <activity android:name=".SettingPage"
-            android:exported="true"/>
-        <activity android:name=".AllTask"
-            android:exported="true"/>
-        <activity android:name=".AddTask"
-            android:exported="true"/>
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.TaskMaster">
+        <activity
+            android:name=".VarificationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SigninActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".TaskDetailPage"
+            android:exported="true" />
+        <activity
+            android:name=".SettingPage"
+            android:exported="true" />
+        <activity
+            android:name=".AllTask"
+            android:exported="true" />
+        <activity
+            android:name=".AddTask"
+            android:exported="true" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
