--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
         // in the individual module build.gradle files
         // Add this line into `dependencies` in `buildscript`
         classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.0'
+
+        // Add this line
+        classpath 'com.google.gms:google-services:4.3.10'
+
     }
 }
 
