--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     // Add this line
     id 'com.google.gms.google-services'
+    id 'com.amplifyframework.amplifytools'
 
 }
 
@@ -37,15 +38,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-
-   // amplify
-    implementation 'com.amplifyframework:aws-api:1.24.0'
-    implementation 'com.amplifyframework:aws-datastore:1.24.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test:runner:1.4.0'
-    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
 
     //Espresso dependencies for RecyclerView
     androidTestImplementation("com.android.support.test.espresso:espresso-contrib:3.0.2"){
@@ -63,6 +59,10 @@ dependencies {
     implementation 'com.amplifyframework:aws-datastore:1.24.0'
     implementation 'com.amplifyframework:core:1.24.0'
     implementation 'com.amplifyframework:aws-api:1.24.0'
+    implementation 'com.amplifyframework:aws-storage-s3:1.24.0'
+    implementation 'com.amplifyframework:aws-analytics-pinpoint:1.24.0'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
+
 
     // room dependencies
     def room_version = "2.3.0"
@@ -88,7 +88,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
     // Overrides an auth dependency to ensure correct behavior
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.25.+'
-    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.26.+@aar') { transitive = true }
+    implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.25.0'
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.26.0@aar') { transitive = true }
 
 }
