--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,15 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+
     }
     dependencies {
 
-
-        classpath 'com.android.tools.build:gradle:7.0.0'
-
+        classpath 'com.android.tools.build:gradle:7.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         // Add this line into `dependencies` in `buildscript`
         classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.0'
-
         // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
 
@@ -24,6 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
@@ -32,4 +31,4 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 // Add this line at the end of the file
-apply plugin: 'com.amplifyframework.amplifytools'
+//apply plugin: 'com.amplifyframework.amplifytools'
